# vimeo-studio

./: CMakeLists.txt  LICENCE  README.md
include/: main_window.hpp  screen_capture.hpp
src/: main.cpp  main_window.cpp  screen_capture.cpp
